# ai-sales

./: .cursorrules  .env.example  .gitignore  AGENT_CAPABILITIES_AND_PLAN.md  Dockerfile  INTEGRATION_MAP_GEARBOX_OEM.md  PLAN_PODZAMENU_LOOKUP.md  PROJECT_MAP.md  README.md  ecosystem.config.cjs  feature_flags.json  max_personal_service.py  nixpacks.toml  package-lock.json  package.json  podzamenu_lookup_service.py  pyproject.toml  railway.toml  regression_iter4_output.txt  start.sh  test_regression_iter4.py
.cursor/agents/: ai-openai-specialist.md  code-reviewer.md  (+7 more)
client/: index.html
docs/: API_REFERENCE.md  AUDIT_AND_IMPROVEMENTS.md  CONVENTIONS.md  DATABASE_SCHEMA.md
migrations/: 0000_pre_migration_check_duplicates.sql  0001a_normalize_emails.sql  0002_subscription_grants_indexes.sql  0003_vehicle_lookup_tables.sql  0004_tenants_templates.sql  0005_price_snapshots.sql  0006_internal_prices.sql  0006_telegram_multiaccount.sql  0007_price_commercial.sql  0008_price_snapshot_search_key.sql  0009_add_templates_and_payment_methods.sql  0010_add_tenant_agent_settings.sql  0011_update_price_snapshots.sql  0012_add_mileage_tiers.sql  0013_feature_flags_composite_unique.sql  0014_max_personal_accounts.sql  0015_max_personal_multiaccount.sql  0016_transmission_identity_cache.sql  0017_price_snapshots_stage.sql  0018_transmission_identity_cache_ttl.sql  0019_ai_suggestions_escalation.sql
script/: build.ts
scripts/: delete-bad-snapshot.ts
server/: config.ts  database-storage.ts  db.ts  index.ts  redis-client.ts  routes.ts  session.ts  storage.ts
shared/: schema.ts
(+198 files in other folders)
