[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "maxapi-python>=1.2.5",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
